Fixing the home bg-img white space

--- a/styles.css
+++ b/styles.css
@@ -192,7 +192,7 @@ nav {
 .home {
   display: flex;
   color: hsl(210.1, 100%, 50%);
-  min-height: 31.25rem;
+  /* min-height: 31.25rem; */
   height: 100vh;
   font-family: "Ubuntu", sans-serif;
   -webkit-text-stroke: 0.5px hsl(0, 0%, 100%);
